@@ -1,3 +1,5 @@
 @echo off
 chcp 65001
-java -jar "dist//KPAH.jar"
+echo Starting KPAH Server with Maven...
+mvn clean compile exec:java -Dexec.mainClass="server.Server" -Dexec.args="--enable-preview"
+pause
